force-app/main/default/objects/Site__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>we can make this global picklist with their valueset and use everywhere (CA/)</description>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>