force-app/main/default/objects/Site__c/fields/Depot_Code__c.field-meta.xml
<CustomField>
    <fullName>Depot_Code__c</fullName>
    <description>This is the UPS depot code that they will reference in reports used to sync inventory</description>
    <label>Depot Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>