force-app/main/default/objects/Site__c/fields/Designation_Type__c.field-meta.xml
<CustomField>
    <fullName>Designation_Type__c</fullName>
    <description>Picklist (Primary3PL, Secondary3PL, Warehouse, Field)</description>
    <label>Designation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary3PL</fullName>
            </value>
            <value>
                <fullName>Secondary3PLWarehouse</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>