force-app/main/default/objects/Site__c/fields/Parent_Site__c.field-meta.xml
<CustomField>
    <fullName>Parent_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this will hold information of company</description>
    <label>Parent Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>