force-app/main/default/objects/Site__c/listViews/All_Sites.listView-meta.xml
<ListView>
    <fullName>All_Sites</fullName>
    <columns>NAME</columns>
    <columns>Depot_Code__c</columns>
    <columns>Designation_Type__c</columns>
    <columns>Country_Code__c</columns>
    <columns>External_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Sites</label>
</ListView>